server-rpc: Add max_offboard_inputs to ArkInfo
